--- a/Personal Site/Pages/Index.cshtml
+++ b/Personal Site/Pages/Index.cshtml
@@ -16,9 +16,8 @@
             (".tv", "Press", "#press", false)
         })
         {
-            <li style="display:@(hide?"none":"")">
+            <li class="@(hide?"hidden":null)">
                 <a href="@href"
-                   role="menuItem"
                    aria-label="@title"
                    title="@title">
                     @text
@@ -38,7 +37,7 @@
 }
 
 <img id="portrait"
-     src="~/img/2021-03.min.jpg"
+     src="~/img/2023-03.jpg"
      alt="portrait"
      aria-label="Portrait of Sean T. McBeth"
      title="Sean T. McBeth" />
@@ -54,7 +53,7 @@
         ("Follow Sean on GitHub", "github", "https://github.com/capnmidnight", ""),
         ("Follow Sean on LinkedIn", "linkedin", "https://www.linkedin.com/pub/sean-mcbeth/6/727/378", ""),
         ("Email Sean", "email", "mailto:sean@removethis.seanmcbeth.com", ""),
-        ("Download Sean's résumé (PDF 159KB)", "resume", "Resume-STMcBeth-2019.pdf", "")
+        ("Download Sean's résumé (PDF 180KB)", "resume", "Resume-Sean_McBeth-2023.pdf", "")
         })
             {
                 <li>
@@ -76,37 +75,71 @@
     <h2>Bio</h2>
 
     <p>
-        My current work is focused on Immersive Media. I've successfully bootstrapped and deployed multiple 
-        <abbr>VR</abbr> and <abbr>AR</abbr> projects. I've also built a number of hardware prototypes in radio
-        and wireless input devices. Before <abbr>VR</abbr>, I built several analytics-heavy <abbr>OLTP</abbr> 
-        applications for desktop, Web, and mobile Web.
-        
+        I am a cross-disciplinary software engineer and project manager with 20 years of professional experience building projects
+        for a wide variety of clients and customers. My current work is focused on Immersive Media. I've successfully bootstrapped
+        and deployed multiple <abbr>VR</abbr> and <abbr>AR</abbr> projects over the last 8 years. I've also built a number of
+        hardware prototypes in radio and wireless input devices. Before <abbr>VR</abbr>, I built several analytics-heavy
+        <abbr>OLTP</abbr> applications for desktop, Web, and mobile Web.
+    </p>
+
     <p>
         My most recent project was <a href="https://vr.dlsdc.com">Diplomatic Language Services Virtual Reality</a>.
-        DLS VR is a multiuser, multimodal WebXR application that includes a full, online editor, designed for 
-        rapidly creating new immersion scenarios by subject matter experts.
+        DLS VR is a multiuser, multimodal, Web-based VR application that includes a full, online editor, designed for
+        subject matter experts to be able to rapidly creating new immersion scenarios.
+    </p>
+
+    <img src="~/img/dlsvr/landing.jpeg" title="DLS VR Landing Page" />
+
+    <p>
+        I built DLS VR from scratch, over the course of approximately 4 years, in tight collaboration with the Language Training Department (LT).
+        In "seeking first to understand", I took a language training course from one of our instructors to gain first-hand knowledge
+        of the student experience at DLS. I incorporated several experienced instructors and curriculum designers directly into the
+        project planning and development process. The LT department and I worked together to collect the latest research in EdTech
+        and VR for language training to incorporate into the project. And I instituted bi-monthly and quarterly meetings pulling
+        all stakeholders together to ensure every voice was heard.
     </p>
 
     <p>
-        I built DLS VR from scratch, using the <a href="https://threejs.org">Three.js library</a>, to run on desktop computers, mobile devices, and VR headsets.
-        Users in the VR front end see each other as a synthetic avatar, with spatialized voice chat, shared pointers, and
-        full body language through shared hand tracking. Students and instructors engaged in a "guided tour" experience,
-        where they discussed the cultural of their target language through the visuals they saw and played role-play scenarios <em>in situ</em>.
+        DLS VR uses the <a href="https://threejs.org">Three.js library</a> and my <a href="https://github.com/capnmidnight/Juniper/">Juniper</a> library,
+        to run on desktop computers, mobile devices, and VR headsets. Users in the VR front end see each other as a synthetic
+        avatar, with spatialized voice chat, shared pointers, and full body language through shared head and hand tracking.
+    </p>
+
+    <img src="~/img/dlsvr/screen1.jpeg" title="Screenshot from DLS VR" />
+
+    <p>
+        Following my belief that technology should be used to help great people do even better work, I designed a "guided tour" metaphor for
+        the application. Unlike competitor VR language training applications that put students on their own inside a rigid,
+        linear, self-contained curriculum of material acted out in generic, unrealistic environments, DLS VR serves as supplement to
+        our existing, accredited, best-in-class, instructor-led training, allowing students and instructors to interact in real-life
+        locations. Participants engage in open-ended discussion about the culture of their target language through the visuals they see,
+        listen to voice-overs and watch videos provided historical details, and play role-play scenarios <em>in situ</em>.
+    </p>
+
+    <img src="~/img/dlsvr/screen2.jpeg" title="Screenshot from DLS VR" />
+
+    <p>
+        The backend editor is a Google Maps-based application that allows instructors and curriculum developers to self-service their own
+        creation of scenarios, without bottlenecking on requiring input from developers or 3D modellers. Scenarios are designed around
+        a travel narrative using Google Street View imagery. Scenario designers can add spatialized background audio to enhance the
+        immersion of the scenario, as well as a wide variety of pedegogical materials: callout images, vocabulary cards,
+        videos, listening tasks, reading tasks, and role-play stations. Instructors can also see reports on student activity, including
+        how much and how long they performed the material, as well as how long they directed their attention to each, individual piece
+        of media provided in the scenario.
+    </p>
+
+    <img src="~/img/dlsvr/screen3.jpeg" title="Screenshot from DLS VR" />
+
+    <p>
+        I also managed a fleet of 35 Meta Quest 2 headsets and built VR training labs at each of DLS' three locations. I was heavily
+        involved in developing marketing materials, promoting the project with students and instructors, facilitating training sessions,
+        training new students, instructors, and content developers on using the system, speaking at conferences and webinars to promote
+        VR as a valuable tool for language training, demoing and selling the system to clients, and searching for business partnerships
+        to sublicense the software.
     </p>
 
     <p>
-        The backend editor is a Google Maps-based application that allows instructors and curriculum designers to self-service
-        create scenarios without bottlenecking on requiring input from developers or 3D modellers. Scenarios are designed around
-        a travel narrative with Google Street View imagery. Scenario designers can add spatialized background audio to enhance the 
-        immersion of the scenario, as well as a wide variety of pedegogical materials in the form: callout images, vocabulary cards, 
-        videos, listening tasks, reading tasks, and role-play stations.
-    </p>
-
-    <p>
-        I also managed a fleet of 35 Meta Quest 2 headsets, built a VR training lab at each of DLS' three locations, and was heavily 
-        involved in developing marketing material, promoting the project with students and instructors, facilitating training sessions, 
-        training new students, instructors, and content developers on using the system, demoing and selling the system to clients, 
-        and searching for business partnerships to sublicense the software.
+        I had direct supervisor responsibility for one fulltime employee and served as mentor for other employees within the company.
     </p>
 
     <p>
@@ -126,11 +159,15 @@
     <ul>
         <li>
             <a href="https://github.com/capnmidnight/Juniper/">Juniper</a>:
-            Juniper is an ASP.NET 6 and TypeScript framework for building WebXR applications.
+            Juniper is an ASP.NET 7 and TypeScript framework for building WebXR applications.
+
+            <img src="~/img/juniper.jpeg" title="Screenshot from Juniper" />
         </li>
         <li>
             <a href="https://www.primrosevr.com/">Primrose</a>:
             Primrose is a syntax-highlighting text-editor that renders to an HTML5 Canvas element. Useful for generating textures for WebGL apps. <a href="https://www.github.com/capnmidnight/Primrose/" aria-label="Primrose on git hub">Primrose on GitHub.</a>
+
+            <img src="~/img/primrose.jpeg" title="Screenshot from Primrose" />
         </li>
         <li>
             <a href="https://www.potatovr.com/">Potato <abbr>VR</abbr></a>:
@@ -151,7 +188,7 @@
     <ul>
         <li>
             <a href="https://calico.org/sigs/virtual-worlds/">CALICO Immersive Realities SIG</a>: A colleauge and I gave a
-            presentation and answered extensive Q+A on designing proficiency-oriented virtual reality scenarios for foreign 
+            presentation and answered extensive Q+A on designing proficiency-oriented virtual reality scenarios for foreign
             language training.
         </li>
     </ul>
