tweaks and updated resume

--- a/Personal Site/Pages/Index.cshtml
+++ b/Personal Site/Pages/Index.cshtml
@@ -85,14 +85,14 @@
     <p>
         My most recent project was <a href="https://vr.dlsdc.com">Diplomatic Language Services Virtual Reality</a>.
         DLS VR is a multiuser, multimodal, Web-based VR application that includes a full, online editor, designed for
-        subject matter experts to be able to rapidly creating new immersion scenarios.
+        subject matter experts to be able to rapidly create new immersion scenarios.
     </p>
 
     <img src="~/img/dlsvr/landing.jpeg" title="DLS VR Landing Page" />
 
     <p>
         I built DLS VR from scratch, over the course of approximately 4 years, in tight collaboration with the Language Training Department (LT).
-        In "seeking first to understand", I took a language training course from one of our instructors to gain first-hand knowledge
+        In "seeking first to understand", I took a language course from one of our instructors to gain first-hand knowledge
         of the student experience at DLS. I incorporated several experienced instructors and curriculum designers directly into the
         project planning and development process. The LT department and I worked together to collect the latest research in EdTech
         and VR for language training to incorporate into the project. And I instituted bi-monthly and quarterly meetings pulling
@@ -113,16 +113,16 @@
         linear, self-contained curriculum of material acted out in generic, unrealistic environments, DLS VR serves as supplement to
         our existing, accredited, best-in-class, instructor-led training, allowing students and instructors to interact in real-life
         locations. Participants engage in open-ended discussion about the culture of their target language through the visuals they see,
-        listen to voice-overs and watch videos provided historical details, and play role-play scenarios <em>in situ</em>.
+        listen to voice-overs, and watch videos providing historical details, and practice role-play scenarios <em>in situ</em>.
     </p>
 
     <img src="~/img/dlsvr/screen2.jpeg" title="Screenshot from DLS VR" />
 
     <p>
         The backend editor is a Google Maps-based application that allows instructors and curriculum developers to self-service their own
-        creation of scenarios, without bottlenecking on requiring input from developers or 3D modellers. Scenarios are designed around
+        creation of scenarios, without bottlenecking on requiring input from developers or 3D modelers. Scenarios are designed around
         a travel narrative using Google Street View imagery. Scenario designers can add spatialized background audio to enhance the
-        immersion of the scenario, as well as a wide variety of pedegogical materials: callout images, vocabulary cards,
+        immersion of the scenario, as well as a wide variety of pedagogical materials: callout images, vocabulary cards,
         videos, listening tasks, reading tasks, and role-play stations. Instructors can also see reports on student activity, including
         how much and how long they performed the material, as well as how long they directed their attention to each, individual piece
         of media provided in the scenario.
@@ -134,7 +134,7 @@
         I also managed a fleet of 35 Meta Quest 2 headsets and built VR training labs at each of DLS' three locations. I was heavily
         involved in developing marketing materials, promoting the project with students and instructors, facilitating training sessions,
         training new students, instructors, and content developers on using the system, speaking at conferences and webinars to promote
-        VR as a valuable tool for language training, demoing and selling the system to clients, and searching for business partnerships
+        VR as a valuable tool for language training, demoing, and selling the system to clients, and searching for business partnerships
         to sublicense the software.
     </p>
 
