--- a/Personal Site/Pages/Shared/_Layout.cshtml
+++ b/Personal Site/Pages/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
         }
     }
 
-    <link rel="stylesheet" type="text/css" href="~/css/index.css">
+    <link rel="stylesheet" type="text/css" href="~/css/index.css#bust1">
 
     @RenderSection("Head", required: false)
 </head>
