--- a/Personal Site/Pages/Index.cshtml
+++ b/Personal Site/Pages/Index.cshtml
@@ -100,7 +100,7 @@
     </p>
 
     <p>
-        DLS VR uses the <a href="https://threejs.org">Three.js library</a> and my <a href="https://github.com/capnmidnight/Juniper/">Juniper</a> library,
+        DLS VR uses the <a href="https://threejs.org">Three.js</a> library and my <a href="https://github.com/capnmidnight/Juniper/">Juniper</a> library,
         to run on desktop computers, mobile devices, and VR headsets. Users in the VR front end see each other as a synthetic
         avatar, with spatialized voice chat, shared pointers, and full body language through shared head and hand tracking.
     </p>
