--- a/Personal Site/Pages/Index.cshtml
+++ b/Personal Site/Pages/Index.cshtml
@@ -104,7 +104,7 @@
          aria-label="projects">
     <h2>Projects</h2>
 
-    <p>Here are some of the most recent projects I've worked on.</p>
+    <p>Here are some of my most recent projects.</p>
 
     <h3><a href="https://vr.dlsdc.com" target="_blank">Diplomatic Language Services Virtual Reality</a></h3>
     <p>
@@ -133,11 +133,10 @@
 
     <p>
         Following my belief that technology should be used to help great people do even better work, I designed a "guided tour" metaphor for
-        the application. Unlike competitor VR language training applications that put students on their own inside a rigid,
-        linear, self-contained curriculum of material acted out in generic, unrealistic environments, DLS VR serves as supplement to
-        our existing, accredited, best-in-class, instructor-led training, allowing students and instructors to interact in real-life
-        locations. Participants engage in open-ended discussion about the culture of their target language through the visuals they see,
-        listen to voice-overs, and watch videos providing historical details, and practice role-play scenarios <em>in situ</em>.
+        the application. Unlike competitor VR language training applications that put students on their own inside in a fixed environment,
+        DLS VR serves as supplement to our existing, accredited, best-in-class, instructor-led training, allowing students and instructors to 
+        interact in real-life locations. Participants engage in open-ended discussion about the culture of their target language through the 
+        visuals they see, listen to voice-overs, and watch videos providing historical details, and practice role-play scenarios <em>in situ</em>.
     </p>
 
     <img src="~/img/dlsvr/screen2.jpeg" title="Screenshot from DLS VR" />
