add alt text for images

--- a/Personal Site/Pages/Index.cshtml
+++ b/Personal Site/Pages/Index.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Sean T. McBeth: engineer, photographer, mad scientist";
     ViewData["Keywords"] = "software development, software engineering, programming, freelancing, Sean T. McBeth, embedded programming, virtual reality, agumented reality, VR, AR, 3D, graphics programming, game development, simulation, abstract data visualization, audio synthesis, signals processing, computer vision, peer-to-peer, networking, desktop software, Web applications, mobile apps, WebRTC, hardware, embedded systems, reporting, GIS, databases";
-    ViewData["Description"] = "Sean T. McBeth is the head of Immersive Software Development at Diplomatic Language Services.";
+    ViewData["Description"] = "Sean T. McBeth is a software engineer and dad.";
 }
 
 @section Menu {
@@ -38,8 +38,7 @@
 
 <img id="portrait"
      src="~/img/2023-03.jpg"
-     alt="portrait"
-     aria-label="Portrait of Sean T. McBeth"
+     alt="Portrait of Sean T. McBeth"
      title="Sean T. McBeth" />
 
 <section id="contact"
@@ -112,7 +111,7 @@
         subject matter experts to be able to rapidly create new immersion scenarios.
     </p>
 
-    <img src="~/img/dlsvr/landing.jpeg" title="DLS VR Landing Page" />
+    <img src="~/img/dlsvr/landing.jpeg" alt="Screenshot of DLS VR Landing Page" title="DLS VR Landing Page" />
 
     <p>
         I built DLS VR from scratch, over the course of approximately 4 years, in tight collaboration with the Language Training Department (LT).
@@ -129,7 +128,7 @@
         avatar, with spatialized voice chat, shared pointers, and full body language through shared head and hand tracking.
     </p>
 
-    <img src="~/img/dlsvr/screen1.jpeg" title="Screenshot from DLS VR" />
+    <img src="~/img/dlsvr/screen1.jpeg" alt="Screenshot from DLS VR" title="Users meeting together in DLS VR" />
 
     <p>
         Following my belief that technology should be used to help great people do even better work, I designed a "guided tour" metaphor for
@@ -139,7 +138,7 @@
         visuals they see, listen to voice-overs, and watch videos providing historical details, and practice role-play scenarios <em>in situ</em>.
     </p>
 
-    <img src="~/img/dlsvr/screen2.jpeg" title="Screenshot from DLS VR" />
+    <img src="~/img/dlsvr/screen2.jpeg" alt="Screenshot from DLS VR" title="Users roleplaying together in DLS VR" />
 
     <p>
         The backend editor is a Google Maps-based application that allows instructors and curriculum developers to self-service their own
@@ -151,7 +150,7 @@
         of media provided in the scenario.
     </p>
 
-    <img src="~/img/dlsvr/screen3.jpeg" title="Screenshot from DLS VR" />
+    <img src="~/img/dlsvr/screen3.jpeg" alt="Screenshot from DLS VR" title="The DLS VR Editor" />
 
     <p>
         I also managed a fleet of 35 Meta Quest 2 headsets and built VR training labs at each of DLS' three locations. I was heavily
@@ -171,7 +170,7 @@
         Juniper is an ASP.NET 7 and TypeScript framework for building WebXR applications. It is an evolution of my previous project, Primrose.
     </p>
 
-    <img src="~/img/juniper.jpeg" title="Screenshot from Juniper" />
+    <img src="~/img/juniper.jpeg" alt="Screenshot from Juniper" title="A forest demo built with Juniper" />
 
     <p>
         Juniper provides a number of major elements:
@@ -223,7 +222,7 @@
         purpose of being able to create cross-platform, multiuser, live-editable VR environments.
     </p>
 
-    <img src="~/img/primrose.jpeg" title="Screenshot from Primrose" />
+    <img src="~/img/primrose.jpeg" alt="Screenshot from Primrose" title="Primrose Text Editor" />
 
     <p>
         Today, I've moved the WebXR framework portions of Primrose to <a href="https://www.github.com/capnmidnight/Juniper">Juniper</a>. 
